fix the gap between buttons and home slider

--- a/src/styles/components/productDetail/productInfo.scss
+++ b/src/styles/components/productDetail/productInfo.scss
@@ -201,7 +201,7 @@ $button-radius: 8px;
     &--buttons {
       @include tablet {
         margin-top: 10px;
-        gap: 15px;
+        gap: 12px;
       }
       @include flex(row, start, center);
       gap: 25px;
